# auth/src/routes/signout.router.ts
@@ -2,7 +2,7 @@ import { Router } from "express";
 
 const router: Router = Router();
 
-router.get("/", (req, res) => {
+router.post("/", (req, res) => {
   req.session = null;
 
   res.send({})
